进化到ES6编码规范

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/JasonBai007/ES6#readme",
   "devDependencies": {
+    "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7"
