--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,12 @@
 {
-    "presets": [
-      "es2015",
-      "stage-0",
-      "react"     
-    ],
-    "plugins": []
+  "presets": [ "es2015", "stage-0", "react"],
+
+  /* if you want to use babel runtime, uncomment the following line */
+  // "plugins": ["transform-runtime"],
+
+  "env": {
+    "build": {
+      "optional": ["optimisation", "minification"]
+    }
   }
+}
