--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   },
   "dependencies": {
     "babel-runtime": "6.x",
+    "material-ui": "^0.15.0",
     "react": "15.x",
-    "react-dom": "15.x"
+    "react-dom": "15.x",
+    "react-tap-event-plugin": "^1.0.0"
   },
   "devDependencies": {
     "babel-core": "6.x",
