--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react",
-  "version": "3.5.0",
+  "version": "4.0.0",
   "description": "",
   "main": "app/main.jsx",
   "scripts": {
@@ -15,13 +15,12 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 1"
   },
   "dependencies": {
+    "antd": "^1.0.1",
     "babel-runtime": "6.x",
     "history": "^2.1.1",
-    "material-ui": "^0.15.0",
     "react": "15.x",
     "react-dom": "15.x",
-    "react-router": "^2.4.0",
-    "react-tap-event-plugin": "^1.0.0"
+    "react-router": "^2.4.0"
   },
   "devDependencies": {
     "babel-core": "6.x",
