--- a/package.json
+++ b/package.json
@@ -3,16 +3,10 @@
   "version": "4.0.0",
   "description": "",
   "main": "app/main.jsx",
-  "scripts": {
-    "lint": "eslint 'app/**/*.@(js|jsx)'",
-    "lint:msg": "validate-commit-msg",
-    "test": "echo \"Error: no test specified\" && exit 1",
+  "scripts": {   
     "build": "webpack",
     "start": "webpack-dev-server --devtool eval --progress --hot --colors --content-base app",
-    "deploy": "NODE_ENV=production webpack -p --config webpack.production.config.js",
-    "validate": "npm ls",
-    "commit": "git cz",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 1"
+    "deploy": "NODE_ENV=production webpack -p --config webpack.production.config.js"   
   },
   "dependencies": {
     "antd": "^1.0.1",
@@ -31,52 +25,18 @@
     "babel-preset-es2015": "6.x",
     "babel-preset-react": "6.x",
     "babel-preset-stage-0": "6.x",
-    "commitizen": "^2.5.0",
-    "conventional-changelog-cli": "1.x",
     "copy-webpack-plugin": "2.x",
     "css-loader": "~0.23.0",
-    "cz-conventional-changelog": "^1.1.5",
-    "eslint": "2.x",
-    "eslint-config-airbnb": "7.x",
-    "eslint-plugin-jsx-a11y": "0.x",
-    "eslint-plugin-react": "4.x",
-    "ghooks": "^1.0.3",
     "mockjs": "^1.0.1-beta2",
     "open-browser-webpack-plugin": "0.0.2",
     "style-loader": "~0.13.0",
-    "validate-commit-msg": "2.x",
     "webpack": "1.x",
     "webpack-dev-server": "1.x"
   },
   "keywords": [
     "es6",
-    "web app",
     "react"
   ],
   "author": "Bai Yanyun",
-  "license": "MIT",
-  "config": {
-    "ghooks": {
-      "pre-commit": "npm run lint",
-      "commit-msg": "npm run lint:msg"
-    },
-    "validate-commit-msg": {
-      "types": [
-        "feat",
-        "fix",
-        "docs",
-        "style",
-        "refactor",
-        "perf",
-        "test",
-        "chore",
-        "revert"
-      ],
-      "warnOnFail": false,
-      "maxSubjectLength": 100
-    },
-    "commitizen": {
-      "path": "node_modules/cz-conventional-changelog"
-    }
-  }
+  "license": "MIT"  
 }
