--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "4.0.0",
   "description": "",
   "main": "app/main.jsx",
-  "scripts": {   
+  "scripts": {
     "build": "webpack",
     "start": "webpack-dev-server --devtool eval --progress --hot --colors --content-base app",
-    "deploy": "NODE_ENV=production webpack -p --config webpack.production.config.js"   
+    "deploy": "NODE_ENV=production webpack -p --config webpack.production.config.js"
   },
   "dependencies": {
     "antd": "^1.0.1",
@@ -18,6 +18,7 @@
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
+    "animate.css": "^3.5.1",
     "babel-core": "6.x",
     "babel-eslint": "6.x",
     "babel-loader": "6.x",
@@ -38,5 +39,5 @@
     "react"
   ],
   "author": "Bai Yanyun",
-  "license": "MIT"  
+  "license": "MIT"
 }
