--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "babel-preset-stage-0": "6.x",
     "copy-webpack-plugin": "2.x",
     "css-loader": "~0.23.0",
+    "es5-shim": "^4.5.8",
+    "es6-promise": "^3.2.1",
+    "fetch-ie8": "^1.4.2",
     "mockjs": "^1.0.1-beta2",
     "open-browser-webpack-plugin": "0.0.2",
     "style-loader": "~0.13.0",
